--- a/public/assets/css/pubKeyManager.css
+++ b/public/assets/css/pubKeyManager.css
@@ -4,6 +4,11 @@ body {
     background-color: #eee;
 }
 
+p.ssh-key {
+    word-break: break-all;
+    white-space: normal;
+}
+
 .form-signin {
     max-width: 330px;
     padding: 15px;
